--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -31,7 +31,7 @@ jobs:
           mode: start
           github-token: ${{ secrets.GH_PAT }}
           ec2-image-id: ${{ secrets.EC2_IMAGE_ID }}
-          ec2-instance-type: t3.large  # Back to simpler instance type
+          ec2-instance-type: t3.large
           subnet-id: ${{ secrets.SUBNET_ID }}
           security-group-id: ${{ secrets.SECURITY_GROUP_ID }}
           aws-resource-tags: >
@@ -52,11 +52,28 @@ jobs:
             sudo apt-get update
             sudo apt-get install -y curl wget
 
+      - name: Show disk usage before cleanup
+        run: df -h
+          
+      - name: Clean up and remove unused packages
+        run: |
+          sudo apt-get clean
+          sudo rm -rf /var/lib/apt/lists/*
+          docker system prune --all --volumes --force || true
+          npm cache clean --force || true
+      
+      - name: Show disk usage after cleanup
+        run: df -h
+          
+
   run-e2e-tests:
     needs: start-runner
     runs-on: ${{ needs.start-runner.outputs.label }}
     if: github.event.deployment_status.state == 'success'
     steps:
+      - name: Disk usage before installation
+        run: df -h
+
       - name: Print Workflow Trigger Event
         env:
           GITHUB_EVENT_CONTEXT: ${{ toJson(github) }}
@@ -100,7 +117,7 @@ jobs:
         run: |
           cd test-automation
           npm install
-          npx playwright install --with-deps
+          npx playwright install
 
       - name: Run Playwright Tests
         run: |
