--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -38,19 +38,36 @@ jobs:
             [{"Key": "Name", "Value": "github-runner"}]
           pre-runner-script: |
             #!/bin/bash
-            # Debug information
-            echo "Checking network connectivity..."
-            curl -v https://api.github.com/
-            
-            echo "Checking AWS connectivity..."
-            aws sts get-caller-identity
-            
-            echo "Checking system resources..."
-            df -h
-            free -h
-            
+            # Update package list
             sudo apt-get update
-            sudo apt-get install -y curl wget
+            
+            # Install Playwright system dependencies
+            sudo apt-get install -y \
+              libatk1.0-0 \
+              libatk-bridge2.0-0 \
+              libcups2 \
+              libdbus-1-3 \
+              libdrm2 \
+              libgbm1 \
+              libgtk-3-0 \
+              libnspr4 \
+              libnss3 \
+              libxcomposite1 \
+              libxdamage1 \
+              libxfixes3 \
+              libxrandr2 \
+              libxshmfence1 \
+              libxss1 \
+              libxtst6 \
+              libglib2.0-0 \
+              libasound2 \
+              libpango-1.0-0 \
+              libpangocairo-1.0-0 \
+              libcairo2 \
+              fonts-liberation \
+              xvfb \
+              wget \
+              curl
 
       - name: Show disk usage before cleanup
         run: df -h
