--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -46,28 +46,22 @@ jobs:
               libatk1.0-0 \
               libatk-bridge2.0-0 \
               libcups2 \
-              libdbus-1-3 \
-              libdrm2 \
-              libgbm1 \
-              libgtk-3-0 \
-              libnspr4 \
-              libnss3 \
               libxcomposite1 \
               libxdamage1 \
               libxfixes3 \
               libxrandr2 \
-              libxshmfence1 \
-              libxss1 \
-              libxtst6 \
-              libglib2.0-0 \
-              libasound2 \
+              libgbm1 \
               libpango-1.0-0 \
-              libpangocairo-1.0-0 \
               libcairo2 \
-              fonts-liberation \
-              xvfb \
-              wget \
-              curl
+              libasound2 \
+              libatspi2.0-0
+            
+            # Install Node.js and npm if needed
+            curl -fsSL https://deb.nodesource.com/setup_18.x | sudo -E bash -
+            sudo apt-get install -y nodejs
+            
+            # Install Playwright globally
+            sudo npm install -g playwright
 
       - name: Show disk usage before cleanup
         run: df -h
