Updated EC2 runner settings

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -145,7 +145,7 @@ jobs:
         run: |
           cd test-automation
           npm install
-          npx playwright install
+          npx playwright install --with-deps
 
       - name: Run Playwright Tests
         run: |
