--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -43,17 +43,16 @@ jobs:
             ]
           pre-runner-script: |
             #!/bin/bash
-            # Disable runner diagnostics completely
-            echo "DISABLE_RUNNER_DIAGNOSTIC_LOGGING=true" >> /actions-runner/.env
-            echo "RUNNER_DIAGNOSTICS_TRACE=0" >> /actions-runner/.env
-            echo "RUNNER_DIAGNOSTICS=0" >> /actions-runner/.env
+            # Modify runner configuration to disable diagnostics
+            sudo sed -i 's/"RUNNER_DIAGNOSTIC":.*/"RUNNER_DIAGNOSTIC":false,/' /actions-runner/.runner
             
-            # Remove diagnostic directory completely
+            # Create empty diagnostic directory that can't be written to
             sudo rm -rf /actions-runner/_diag
+            sudo mkdir -p /actions-runner/_diag
+            sudo chattr +i /actions-runner/_diag  # Make directory immutable
             
-            # Prevent recreation of diagnostic directory
-            sudo touch /actions-runner/_diag
-            sudo chmod 444 /actions-runner/_diag
+            # Show current disk space
+            df -h /
             
             # Create RAM disk for all volatile directories
             sudo mkdir -p /mnt/ramdisk
