--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -42,27 +42,13 @@ jobs:
             ]
           pre-runner-script: |
             #!/bin/bash
-            # Install logrotate if not present
-            sudo apt-get update -qq && sudo apt-get install -y -qq logrotate
-
-            # Configure logrotate for GitHub runner logs
-            sudo tee /etc/logrotate.d/github-runner << 'EOF'
-            /actions-runner/_diag/*.log {
-              size 10M
-              rotate 2
-              missingok
-              notifempty
-              compress
-              copytruncate
-              create 0644 root root
-            }
-            EOF
-
-            # Force logrotate to run immediately
-            sudo logrotate -f /etc/logrotate.d/github-runner
-
-            # Clean up any existing large log files
-            sudo find /actions-runner/_diag -type f -name "*.log" -size +10M -delete
+            # Set up a background process to keep the Worker log file small
+            (while true; do
+              if [ -f /actions-runner/_diag/Worker_*.log ]; then
+                truncate -s 1M /actions-runner/_diag/Worker_*.log
+              fi
+              sleep 1
+            done) &
 
       - name: Show disk usage before cleanup
         run: df -h
