--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -69,6 +69,28 @@ jobs:
     runs-on: ${{ needs.start-runner.outputs.label }}
     if: github.event.deployment_status.state == 'success'
     steps:
+      - name: Free disk space
+        run: |
+          # Show initial space
+          df -h
+          
+          # Remove unnecessary large packages
+          sudo apt-get remove -y '^ghc-8.*' '^dotnet-.*' '^llvm-.*' '^mono-.*' '^mysql-.*' '^php-.*'
+          sudo apt-get autoremove -y
+          sudo apt-get clean
+          
+          # Remove large directories we don't need
+          sudo rm -rf /usr/share/dotnet/
+          sudo rm -rf /usr/local/lib/android/
+          sudo rm -rf /opt/ghc
+          sudo rm -rf /opt/hostedtoolcache
+          
+          # Clear npm cache
+          npm cache clean --force
+          
+          # Show space after cleanup
+          df -h
+
       - name: Disk usage before installation
         run: df -h
 
