--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -45,10 +45,18 @@ jobs:
       - name: Clean up and remove unused packages
         run: |
           sudo apt-get clean
+          sudo apt-get autoremove -y
           sudo rm -rf /var/lib/apt/lists/*
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /usr/local/lib/android
+          sudo rm -rf /opt/ghc
+          sudo rm -rf /opt/hostedtoolcache
           docker system prune --all --volumes --force || true
           npm cache clean --force || true
-      
+          sudo swapoff -a
+          sudo rm -f /swapfile
+          df -h
+
       - name: Show disk usage after cleanup
         run: df -h
           
@@ -58,6 +66,12 @@ jobs:
     runs-on: ${{ needs.start-runner.outputs.label }}
     if: github.event.deployment_status.state == 'success'
     steps:
+      - name: Free up disk space
+        run: |
+          sudo apt-get clean
+          sudo apt-get autoremove -y
+          sudo rm -rf /var/lib/apt/lists/*
+          df -h
 
       - name: Disk usage before installation
         run: df -h
