--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -31,39 +31,18 @@ jobs:
           mode: start
           github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
           ec2-image-id: ${{ secrets.EC2_IMAGE_ID }}
-          ec2-instance-type: t3.xlarge
+          ec2-instance-type: t3.2xlarge  # Increased instance size
           subnet-id: ${{ secrets.SUBNET_ID }}
           security-group-id: ${{ secrets.SECURITY_GROUP_ID }}
           aws-resource-tags: >
             [
               {"Key": "Name", "Value": "github-runner"}
             ]
-          block-device-mappings: >
-            [
-              {
-                "DeviceName": "/dev/sda1",
-                "Ebs": {
-                  "VolumeSize": 40,
-                  "VolumeType": "gp3",
-                  "DeleteOnTermination": true
-                }
-              }
-            ]
 
-      - name: Clean up and remove unused packages
+      - name: Clean up and prepare workspace
         run: |
-          # Show initial disk space
+          # Show initial space
           df -h
-          
-          # Create and mount new workspace directory
-          sudo mkdir -p /workspace
-          sudo mount /dev/sda1 /workspace || true
-          sudo chmod 777 /workspace
-          
-          # Move GitHub workspace to new volume
-          sudo rsync -av $GITHUB_WORKSPACE/ /workspace/
-          export GITHUB_WORKSPACE=/workspace
-          cd /workspace
           
           # Aggressive cleanup
           sudo docker system prune -af
@@ -74,6 +53,14 @@ jobs:
           sudo rm -rf /usr/local/lib/android
           sudo rm -rf /opt/ghc
           sudo rm -rf /opt/hostedtoolcache
+          
+          # Clear npm and yarn caches
+          npm cache clean --force || true
+          yarn cache clean || true
+          
+          # Remove unnecessary large packages
+          sudo apt-get remove -y '^ghc-8.*' '^dotnet-.*' '^llvm-.*' '^mono-.*' '^php.*' || true
+          sudo apt-get remove -y '^google-cloud-sdk.*' '^azure-cli.*' || true
           
           # Show final space
           df -h
@@ -143,8 +130,7 @@ jobs:
         run: |
           cd test-automation
           npm install
-          npx playwright install
-          npx playwright install-deps 
+          npx playwright install --with-deps
 
       - name: Run Playwright Tests
         run: |
