--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -10,10 +10,141 @@ on:
     - cron: '0 8 * * *'
     
 jobs:
-  run-e2e-tests:
+  start-runner:
+    name: Start EC2 Runner
     runs-on: ubuntu-latest
+    outputs:
+      label: ${{ steps.start-ec2-runner.outputs.label }}
+      ec2-instance-id: ${{ steps.start-ec2-runner.outputs.ec2-instance-id }}
+    steps:
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+          
+      - name: Start EC2 runner
+        id: start-ec2-runner
+        uses: machulav/ec2-github-runner@v2
+        with:
+          mode: start
+          github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
+          ec2-image-id: ${{ secrets.EC2_IMAGE_ID }}
+          ec2-instance-type: c6gd.large
+          subnet-id: ${{ secrets.SUBNET_ID }}
+          security-group-id: ${{ secrets.SECURITY_GROUP_ID }}
+          aws-resource-tags: >
+            [
+              {"Key": "Name", "Value": "github-runner"}
+            ]
+          user-data: |
+            #!/bin/bash
+            # Update system
+            apt-get update
+            apt-get upgrade -y
+
+            # Install essential build tools and dependencies
+            apt-get install -y \
+                docker.io \
+                git \
+                curl \
+                wget \
+                jq \
+                unzip \
+                build-essential \
+                software-properties-common
+
+            # Install Node.js 16
+            curl -fsSL https://deb.nodesource.com/setup_16.x | bash -
+            apt-get install -y nodejs
+
+            # Install Playwright dependencies
+            apt-get install -y \
+                libnss3 \
+                libnspr4 \
+                libatk1.0-0 \
+                libatk-bridge2.0-0 \
+                libcups2 \
+                libdrm2 \
+                libxkbcommon0 \
+                libxcomposite1 \
+                libxdamage1 \
+                libxfixes3 \
+                libxrandr2 \
+                libgbm1 \
+                libasound2
+
+            # Clean up
+            apt-get clean
+            apt-get autoremove -y
+
+      - name: Clean up and prepare workspace
+        run: |
+          # Show initial space
+          df -h
+          
+          # Aggressive cleanup
+          sudo apt-get clean
+          sudo apt-get autoremove -y
+          sudo rm -rf /var/lib/apt/lists/*
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /usr/local/lib/android
+          sudo rm -rf /opt/ghc
+          sudo rm -rf /opt/hostedtoolcache
+          
+          # Clear npm and yarn caches
+          npm cache clean --force || true
+          yarn cache clean || true
+          
+          # Remove unnecessary large packages
+          sudo apt-get remove -y '^ghc-8.*' '^dotnet-.*' '^llvm-.*' '^mono-.*' '^php.*' || true
+          sudo apt-get remove -y '^google-cloud-sdk.*' '^azure-cli.*' || true
+          
+          # Show final space
+          df -h
+
+      - name: Extend root volume
+        run: |
+          sudo growpart /dev/root 1 || true
+          sudo resize2fs /dev/root || true
+          df -h
+
+      - name: Setup NVMe storage
+        run: |
+          # List available NVMe devices
+          lsblk
+          
+          # Create mount point
+          sudo mkdir -p /mnt/nvme
+          
+          # Format and mount the NVMe drive (adjust device name as needed)
+          sudo mkfs -t xfs /dev/nvme1n1 || true
+          sudo mount /dev/nvme1n1 /mnt/nvme || true
+          
+          # Set permissions
+          sudo chown -R $USER:$USER /mnt/nvme
+          
+          # Move working directory to NVMe storage
+          mkdir -p /mnt/nvme/workspace
+          echo "RUNNER_TEMP=/mnt/nvme/workspace" >> $GITHUB_ENV
+          echo "RUNNER_WORKSPACE=/mnt/nvme/workspace" >> $GITHUB_ENV
+
+  run-e2e-tests:
+    needs: start-runner
+    runs-on: ${{ needs.start-runner.outputs.label }}
     if: github.event.deployment_status.state == 'success'
     steps:
+      - name: Free up disk space
+        run: |
+          sudo apt-get clean
+          sudo apt-get autoremove -y
+          sudo rm -rf /var/lib/apt/lists/*
+          df -h
+
+      - name: Disk usage before installation
+        run: df -h
+
       - name: Print Workflow Trigger Event
         env:
           GITHUB_EVENT_CONTEXT: ${{ toJson(github) }}
@@ -107,3 +238,26 @@ jobs:
               }
             ]
           }' $SLACK_WORKFLOW_WEBHOOK
+
+  stop-runner:
+    name: Stop self-hosted EC2 runner
+    needs:
+      - start-runner
+      - run-e2e-tests
+    runs-on: ubuntu-latest
+    if: always()
+    steps:
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
+      - name: Stop EC2 runner
+        uses: machulav/ec2-github-runner@v2
+        with:
+          mode: stop
+          github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
+          label: ${{ needs.start-runner.outputs.label }}
+          ec2-instance-id: ${{ needs.start-runner.outputs.ec2-instance-id }}
