--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -143,7 +143,7 @@ jobs:
           repository: thegoodparty/test-automation
           token: ${{ secrets.GH_PAT_TEST }}
           path: test-automation
-          ref: enable_all_tests
+          ref: develop
 
       - name: Install Playwright Dependencies in test-automation Repo
         run: |
