--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "date-fns": "^4.1.0",
     "es-toolkit": "^1.32.0",
     "framer-motion": "^9.0.4",
+    "fuse.js": "^7.1.0",
     "hamburger-react": "^2.5.0",
     "intro.js-react": "^1.0.0",
     "isbot": "^5.1.1",
